--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trioentor code</title
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -196,4 +196,5 @@
         </div>
     </div>
 </body>
+
 </html>
